ingress/nextcloud/ingress-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 444
    targetPort: 444

---

apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.2
    ports:
      - port: 444

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextcloud
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Change to HTTPS if required
spec:
  ingressClassName: nginx
  rules:
  - host: cloud.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-external
            port:
              number: 444
  tls:
  - hosts:
    - cloud.domain.com
    secretName: nextcloud-tls
